Grease Pencil Fade Layers Overlay only works in Material and Texture Color Shading modes #69513

Closed
opened 2019-09-05 00:25:33 +02:00 by Bun ny · 3 comments

System Information
Operating system: Windows 7 x64
Graphics card: NVIDIA GeForce GTX 580

Blender Version
Broken: 2.80

Short description of error
Since Grease Pencil objects began to be affected by the viewport shading Color setting (View3DShading.color_type), the Fade Layers overlay only works when the color type is set to Material or Texture, and is ignored in all others. Being an overlay, user expects it should override other shading settings.

Exact steps for others to reproduce the error
Create new Grease Pencil object, switch to Draw mode, draw on two different layers, enable Fade Layers in the viewport Overlays menu, change the Color setting in the viewport Shading menu to Random.

gpencil_fade_bug.blend

**System Information** Operating system: Windows 7 x64 Graphics card: NVIDIA GeForce GTX 580 **Blender Version** Broken: 2.80 **Short description of error** Since Grease Pencil objects began to be affected by the viewport shading Color setting (View3DShading.color_type), the Fade Layers overlay only works when the color type is set to Material or Texture, and is ignored in all others. Being an overlay, user expects it should override other shading settings. **Exact steps for others to reproduce the error** Create new Grease Pencil object, switch to Draw mode, draw on two different layers, enable Fade Layers in the viewport Overlays menu, change the Color setting in the viewport Shading menu to Random. [gpencil_fade_bug.blend](https://archive.blender.org/developer/F7717648/gpencil_fade_bug.blend)
Author

Added subscriber: @bunny

Added subscriber: @bunny
Antonio Vazquez self-assigned this 2019-09-05 17:27:54 +02:00

This issue was referenced by c90b81172b

This issue was referenced by c90b81172b30b15e4f2f9e6a9a454f1d177176ac

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69513
No description provided.