Fix T69513: Grease Pencil  Fade Layers Overlay only works in Material and Texture Shading

The overlay factor was not used in other modes.